# MacSpotlightSetter

./: .gitignore  Cargo.toml  LICENSE  README.md  set_plist.sh
.github/workflows/: release.yaml
src/: lib.rs  main.rs
