[package]
name = "mac_spotlight_setter"
version = "0.1.0"
edition = "2021"

[dependencies]
osascript = "0.3.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "mac_spotlight_setter"
path = "src/main.rs"

[lib]
name = "mac_spotlight_setter"
path = "src/lib.rs"
