[package]
name = "mac_spotlight_setter"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs-next = { version = "2.0.0"}
miniserde = { version = "0.1.40"}
ureq = { version = "2.10.1", default-features = false, features = ["tls", "gzip"]}

[[bin]]
name = "mac_spotlight_setter"
path = "src/main.rs"

[lib]
name = "mac_spotlight_setter"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
strip = true
panic = "abort"
